--- a/app/src/main/res/layout/fragment_currencies.xml
+++ b/app/src/main/res/layout/fragment_currencies.xml
@@ -8,9 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Currencies$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cardRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 </RelativeLayout>
