--- a/app/src/main/res/layout/cardview_currency.xml
+++ b/app/src/main/res/layout/cardview_currency.xml
@@ -28,6 +28,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/selected"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,16 +43,16 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/code"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_toRightOf="@id/selected"
+            android:layout_toEndOf="@id/selected"
             />
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_toRightOf="@id/selected"
+            android:layout_toEndOf="@id/selected"
             android:layout_alignTop="@id/code"
             android:textAppearance="?android:attr/textAppearance"
             />
@@ -57,7 +65,9 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_alignLeft="@id/code"
+            android:layout_alignStart="@id/code"
             android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             />
 
