--- a/app/src/debug/res/layout/activity_currencies_debug_container.xml
+++ b/app/src/debug/res/layout/activity_currencies_debug_container.xml
@@ -36,7 +36,7 @@
         android:layout_width="290dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        android:background="#ffbbbbbb"
+        android:background="@color/primary_light"
         >
 
         <include
