--- a/app/src/debug/res/layout/debug_drawer_content.xml
+++ b/app/src/debug/res/layout/debug_drawer_content.xml
@@ -17,36 +17,92 @@
 
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
             android:columnCount="2"
-            android:background="@color/background_material_dark"
-            tools:ignore="HardcodedText">
+            tools:ignore="HardcodedText"
+    >
+
+    <!-- Drawer Header -->
+
+    <LinearLayout
+        android:layout_columnSpan="2"
+        android:layout_gravity="start|end"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center_vertical|end"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Development settings"
+                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+                />
+        </LinearLayout>
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_launcher"
+            />
+    </LinearLayout>
+
+    <!-- UI Settings -->
+    <TextView
+        android:layout_gravity="start|end"
+        android:layout_columnSpan="2"
+        android:text="UI"
+        style="@style/Widget.DebugDrawer.Header"
+        />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="UI"
-        android:layout_gravity="start|end"
-        android:layout_columnSpan="2"/>
-
-    <Switch
-        android:layout_gravity="start|center_vertical"
-        android:id="@+id/debug_dspec_show_grid"
         android:text="Show Dspec grid"
+        android:layout_gravity="start|end|center_vertical"
+        style="@style/Widget.DebugDrawer.RowTitle"
         />
 
     <Switch
+        android:id="@+id/debug_dspec_show_grid"
         android:layout_gravity="start|center_vertical"
-        android:id="@+id/debug_dspec_show_keylines"
+        style="@style/Widget.DebugDrawer.RowWidget"
+        />
+
+    <TextView
         android:text="Show Dspec keylines"
+        android:layout_gravity="start|end|center_vertical"
+        style="@style/Widget.DebugDrawer.RowTitle"
         />
 
     <Switch
+        android:id="@+id/debug_dspec_show_keylines"
         android:layout_gravity="start|center_vertical"
-        android:id="@+id/debug_dspec_show_spacings"
+        style="@style/Widget.DebugDrawer.RowWidget"
+        />
+
+    <TextView
         android:text="Show Dspec spacings"
+        android:layout_gravity="start|end|center_vertical"
+        style="@style/Widget.DebugDrawer.RowTitle"
+        />
+
+    <Switch
+        android:id="@+id/debug_dspec_show_spacings"
+        android:layout_gravity="start|center_vertical"
+        style="@style/Widget.DebugDrawer.RowWidget"
         />
 
 </GridLayout>
