--- a/app/src/debug/res/layout/debug_drawer_content.xml
+++ b/app/src/debug/res/layout/debug_drawer_content.xml
@@ -32,6 +32,7 @@
         android:layout_gravity="start|end"
         android:orientation="horizontal"
         >
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="48dp"
@@ -41,12 +42,14 @@
             android:gravity="center_vertical|end"
             android:orientation="vertical"
             >
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                 />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,6 +57,7 @@
                 style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                 />
         </LinearLayout>
+
         <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -62,47 +66,8 @@
     </LinearLayout>
 
     <!-- UI Settings -->
-    <TextView
-        android:layout_gravity="start|end"
-        android:layout_columnSpan="2"
-        android:text="UI"
-        style="@style/Widget.DebugDrawer.Header"
-        />
+    <include layout="@layout/debug_drawer_content_ui"/>
 
-    <TextView
-        android:text="Show Dspec grid"
-        android:layout_gravity="start|end|center_vertical"
-        style="@style/Widget.DebugDrawer.RowTitle"
-        />
-
-    <Switch
-        android:id="@+id/debug_dspec_show_grid"
-        android:layout_gravity="start|center_vertical"
-        style="@style/Widget.DebugDrawer.RowWidget"
-        />
-
-    <TextView
-        android:text="Show Dspec keylines"
-        android:layout_gravity="start|end|center_vertical"
-        style="@style/Widget.DebugDrawer.RowTitle"
-        />
-
-    <Switch
-        android:id="@+id/debug_dspec_show_keylines"
-        android:layout_gravity="start|center_vertical"
-        style="@style/Widget.DebugDrawer.RowWidget"
-        />
-
-    <TextView
-        android:text="Show Dspec spacings"
-        android:layout_gravity="start|end|center_vertical"
-        style="@style/Widget.DebugDrawer.RowTitle"
-        />
-
-    <Switch
-        android:id="@+id/debug_dspec_show_spacings"
-        android:layout_gravity="start|center_vertical"
-        style="@style/Widget.DebugDrawer.RowWidget"
-        />
-
+    <!-- Build Info -->
+    <include layout="@layout/debug_drawer_content_buildinfo"/>
 </GridLayout>
