--- a/app/src/debug/res/values/debug_styles.xml
+++ b/app/src/debug/res/values/debug_styles.xml
@@ -40,6 +40,10 @@
     <style name="Widget.DebugDrawer.RowValue" parent="Widget.DebugDrawer.RowWidget">
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:marqueeRepeatLimit">marquee_forever</item>
+        <item name="android:scrollHorizontally">true</item>
+
     </style>
 
 </resources>
