Added non-functional UI for selecting network endpoint to debug drawer

--- a/app/src/debug/res/layout/debug_drawer_content.xml
+++ b/app/src/debug/res/layout/debug_drawer_content.xml
@@ -65,9 +65,13 @@
             />
     </LinearLayout>
 
+    <!-- Network Settings -->
+    <include layout="@layout/debug_drawer_content_network"/>
+
     <!-- UI Settings -->
     <include layout="@layout/debug_drawer_content_ui"/>
 
     <!-- Build Info -->
     <include layout="@layout/debug_drawer_content_buildinfo"/>
+
 </GridLayout>
